crud operation fixes and alignment issues resolved

--- a/src/app/summary/import-summary/import-summary.component.scss
+++ b/src/app/summary/import-summary/import-summary.component.scss
@@ -1,7 +1,7 @@
 .upload {
-    width: 22%;
+    width: 70%;
     display: flex;
-    float: right;
+    // float: none;
     height: fit-content;
     padding-right: 30px;
 }
